--- a/src/main/resources/fxml/AdminMenu/AdminEditPersonalInfo.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminEditPersonalInfo.fxml
@@ -10,14 +10,14 @@
    <MenuItem onAction="#back" text="back" />
   </Menu>
  </MenuBar>
- <PasswordField fx:id="passwordField" layoutX="68.0" layoutY="215.0" promptText="New Password" styleClass="underlinedTextField" />
- <TextField fx:id="passwordTextField" layoutX="68.0" layoutY="215.0" styleClass="underlinedTextField" />
+ <PasswordField fx:id="passwordField" layoutX="68.0" layoutY="215.0" prefHeight="27.0" prefWidth="149.0" promptText="New Password" styleClass="underlinedTextField" />
+ <TextField fx:id="passwordTextField" layoutX="68.0" layoutY="215.0" prefHeight="27.0" prefWidth="149.0" styleClass="underlinedTextField" />
  <CheckBox fx:id="passwordCheckBox" layoutX="124.0" layoutY="242.0" mnemonicParsing="false" text="show password?" />
  <Button layoutX="243.0" layoutY="214.0" onMouseClicked="#changePassword" prefHeight="27.0" prefWidth="72.0" styleClass="myBlueButton" text="change" />
-    <TextField fx:id="name" layoutX="68.0" layoutY="75.0" onKeyReleased="#updateName" promptText="New First Name" styleClass="underlinedTextField" />
-    <TextField fx:id="surname" layoutX="68.0" layoutY="112.0" onKeyReleased="#updateName" promptText="New Surname" styleClass="underlinedTextField" />
-    <TextField fx:id="email" layoutX="68.0" layoutY="149.0" onKeyReleased="#updateEmail" promptText="New Email" styleClass="underlinedTextField" />
-     <TextField fx:id="number" layoutX="68.0" layoutY="183.0" onKeyReleased="#updateNumber" promptText="New Number" styleClass="underlinedTextField" />
+    <TextField fx:id="name" layoutX="68.0" layoutY="75.0" onKeyReleased="#updateName" prefHeight="27.0" prefWidth="149.0" promptText="New First Name" styleClass="underlinedTextField" />
+    <TextField fx:id="surname" layoutX="68.0" layoutY="112.0" onKeyReleased="#updateName" prefHeight="27.0" prefWidth="149.0" promptText="New Surname" styleClass="underlinedTextField" />
+    <TextField fx:id="email" layoutX="68.0" layoutY="149.0" onKeyReleased="#updateEmail" prefHeight="27.0" prefWidth="149.0" promptText="New Email" styleClass="underlinedTextField" />
+     <TextField fx:id="number" layoutX="68.0" layoutY="183.0" onKeyReleased="#updateNumber" prefHeight="27.0" prefWidth="149.0" promptText="New Number" styleClass="underlinedTextField" />
      <ListView fx:id="personalInfo" layoutX="15.0" layoutY="267.0" prefHeight="173.0" prefWidth="217.0" />
      <ImageView fx:id="imageView" fitHeight="148.0" fitWidth="244.0" layoutX="343.0" layoutY="28.0" />
      <Button layoutX="243.0" layoutY="75.0" onMouseClicked="#changeName" prefHeight="27.0" prefWidth="72.0" styleClass="myBlueButton" text="change" />
