--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -22,15 +22,15 @@
          </Menu>
        </menus>
      </MenuBar>
-     <Button layoutX="14.0" layoutY="106.0" mnemonicParsing="false" onAction="#userzone" styleClass="myBlueButton" text="User Zone" />
-      <Button layoutX="14.0" layoutY="144.0" mnemonicParsing="false" onAction="#shop" prefHeight="27.0" prefWidth="75.0" styleClass="myBlueButton" text="Shop" />
-     <Button layoutX="13.0" layoutY="218.0" onAction="#cartMenu" styleClass="myBlueButton" text="Cart Menu" />
-     <Button layoutX="14.0" layoutY="268.0" onAction="#exit" prefHeight="27.0" prefWidth="75.0" styleClass="myBlueButton" text="exit" />
-     <Button fx:id="loginLogout" layoutX="14.0" layoutY="64.0" onMouseClicked="#loginLogout" prefHeight="27.0" prefWidth="75.0" styleClass="myBlueButton" text="login" />
-     <Button layoutX="17.0" layoutY="179.0" onMouseClicked="#saleShop" styleClass="myBlueButton" text="sale shop" />
-       <VBox fx:id="commercial" layoutX="108.0" layoutY="65.0" prefHeight="241.0" prefWidth="211.0" />
-       <Button fx:id="nextButton" layoutX="172.0" layoutY="30.0" onMouseClicked="#nextCommercial" styleClass="myBlueButton" text="next" />
-       <Button fx:id="previousButton" layoutX="97.0" layoutY="30.0" onMouseClicked="#previousCommercial" styleClass="myBlueButton" text="previous" />
+     <Button layoutX="428.0" layoutY="484.0" mnemonicParsing="false" onAction="#userzone" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="User Zone" />
+      <Button layoutX="587.0" layoutY="484.0" mnemonicParsing="false" onAction="#shop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Shop" />
+     <Button layoutX="901.0" layoutY="484.0" onAction="#cartMenu" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="Cart Menu" />
+     <Button layoutX="616.0" layoutY="668.0" onAction="#exit" prefHeight="27.0" prefWidth="75.0" styleClass="myBlueButton" text="exit" />
+     <Button fx:id="loginLogout" layoutX="267.0" layoutY="484.0" onMouseClicked="#loginLogout" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="login" />
+     <Button layoutX="746.0" layoutY="484.0" onMouseClicked="#saleShop" prefHeight="112.0" prefWidth="133.0" styleClass="myBlueButton" text="sale shop" />
+       <VBox fx:id="commercial" layoutX="535.0" layoutY="91.0" prefHeight="241.0" prefWidth="211.0" />
+       <Button fx:id="nextButton" layoutX="717.0" layoutY="366.0" onMouseClicked="#nextCommercial" styleClass="myBlueButton" text="next" />
+       <Button fx:id="previousButton" layoutX="535.0" layoutY="366.0" onMouseClicked="#previousCommercial" styleClass="myBlueButton" text="previous" />
        <Label fx:id="slideCount" layoutX="222.0" layoutY="35.0" prefHeight="17.0" prefWidth="90.0" />
    </children>
 
