--- a/src/main/resources/fxml/AdminRegisterMenu.fxml
+++ b/src/main/resources/fxml/AdminRegisterMenu.fxml
@@ -6,14 +6,14 @@
 <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="registerAdminMenu" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.AdminRegisterController">
    <children>
       <TextField fx:id="usernameTextField" layoutX="715.0" layoutY="125.0" prefHeight="25.0" prefWidth="137.0" promptText="Username" styleClass="myTextField" />
-       <PasswordField fx:id="passwordField" layoutX="890.0" layoutY="125.0" promptText="Password" styleClass="myTextField" />
-       <TextField fx:id="passwordTextField" layoutX="890.0" layoutY="125.0" promptText="Password" styleClass="myTextField" />
+       <PasswordField fx:id="passwordField" layoutX="890.0" layoutY="125.0" prefHeight="25.0" prefWidth="149.0" promptText="Password" styleClass="myTextField" />
+       <TextField fx:id="passwordTextField" layoutX="890.0" layoutY="125.0" prefHeight="25.0" prefWidth="137.0" promptText="Password" styleClass="myTextField" />
        <TextField fx:id="firstNameTextField" layoutX="711.0" layoutY="240.0" prefHeight="25.0" prefWidth="137.0" promptText="First Name" styleClass="myTextField" />
-      <TextField fx:id="surnameTextField" layoutX="897.0" layoutY="238.0" prefHeight="25.0" prefWidth="128.0" promptText="Surname" styleClass="myTextField" />
+      <TextField fx:id="surnameTextField" layoutX="897.0" layoutY="238.0" prefHeight="25.0" prefWidth="137.0" promptText="Surname" styleClass="myTextField" />
       <TextField fx:id="emailTextField" layoutX="713.0" layoutY="348.0" prefHeight="25.0" prefWidth="137.0" promptText="Email" styleClass="myTextField" />
-      <TextField fx:id="phoneNumberTextFiled" layoutX="890.0" layoutY="348.0" promptText="Phone" styleClass="myTextField" />
+      <TextField fx:id="phoneNumberTextFiled" layoutX="890.0" layoutY="348.0" prefHeight="25.0" prefWidth="149.0" promptText="Phone" styleClass="myTextField" />
       <Button layoutX="879.0" layoutY="550.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="158.0" styleClass="myBlueButton" text="Register" />
-      <TextField fx:id="imageDirectory" layoutX="715.0" layoutY="454.0" prefHeight="25.0" prefWidth="128.0" promptText="Image" styleClass="myTextField" />
+      <TextField fx:id="imageDirectory" layoutX="715.0" layoutY="454.0" prefHeight="25.0" prefWidth="137.0" promptText="Image" styleClass="myTextField" />
       <Button layoutX="850.0" layoutY="454.0" mnemonicParsing="false" onAction="#fileChooserOpen" styleClass="myBlueButton" text="..." />
       <CheckBox fx:id="passwordCheckBox" layoutX="921.0" layoutY="167.0" mnemonicParsing="false" text="show Password?" />
       <Label fx:id="usernameLabel" layoutX="688.0" layoutY="150.0" prefHeight="17.0" prefWidth="191.0" />
