--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -60,11 +60,11 @@
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="attributeListView" layoutX="60.0" layoutY="200.0" prefHeight="331.0" prefWidth="387.0" />
+                        <ListView fx:id="attributeListView" layoutX="60.0" layoutY="200.0" prefHeight="331.0" prefWidth="387.0" style="-fx-border-color: #94a8b3;" />
                         <Label layoutX="120.0" layoutY="574.0" prefHeight="17.0" prefWidth="104.0" text="Comparable Items:" />
                         <ComboBox fx:id="itemComoBox" layoutX="269.0" layoutY="570.0" onMouseClicked="#updateItemComoBox" prefWidth="150.0" styleClass="myBlueButton" />
                         <Button layoutX="270.0" layoutY="614.0" mnemonicParsing="false" onAction="#compare" prefHeight="39.0" prefWidth="147.0" styleClass="myBlueButton" text="Compare" />
-                        <TextArea fx:id="itemDetails" editable="false" layoutX="61.0" layoutY="42.0" prefHeight="106.0" prefWidth="385.0" />
+                        <TextArea fx:id="itemDetails" editable="false" layoutX="61.0" layoutY="42.0" prefHeight="106.0" prefWidth="385.0" style="-fx-border-color: #94a8b3;" />
                      </children></AnchorPane>
                 </content>
             </Tab>
@@ -86,7 +86,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                          <ListView fx:id="commentListView" layoutX="14.0" layoutY="37.0" prefHeight="591.0" prefWidth="445.0" />
+                          <ListView fx:id="commentListView" layoutX="14.0" layoutY="37.0" prefHeight="591.0" prefWidth="445.0" style="-fx-border-color: #94a8b3;" />
                           <Button layoutX="276.0" layoutY="638.0" mnemonicParsing="false" onAction="#comment" prefHeight="48.0" prefWidth="183.0" styleClass="myBlueButton" text="add Comment" />
                         <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="146.0" text="all Comments" />
                      </children></AnchorPane>
@@ -97,11 +97,13 @@
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="familyItemListView" layoutX="60.0" layoutY="14.0" onMouseClicked="#showItem" prefHeight="660.0" prefWidth="387.0" />
+                        <ListView fx:id="familyItemListView" layoutX="60.0" layoutY="14.0" onMouseClicked="#showItem" prefHeight="660.0" prefWidth="387.0" style="-fx-border-color: #94a8b3;" />
                      </children></AnchorPane>
                 </content>
             </Tab>
         </tabs>
       </TabPane>
+      <ChoiceBox fx:id="sellerChoiceBox" onAction="#setSeller" layoutX="633.0" layoutY="497.0" prefHeight="17.0" prefWidth="150.0" styleClass="myBlueButton" />
+      <Label layoutX="632.0" layoutY="473.0" prefHeight="17.0" prefWidth="144.0" text="Choose another seller" />
     </children>
 </AnchorPane>
