--- a/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
@@ -17,9 +17,9 @@
    <Button layoutX="226.0" layoutY="148.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" prefWidth="137.0" styleClass="myBlueButton" text="Add Product" />
     <ListView fx:id="listView" layoutX="389.0" layoutY="148.0" onMouseClicked="#itemSelect" prefHeight="429.0" prefWidth="502.0" />
     <ChoiceBox fx:id="sortChoiceBox" layoutX="685.0" layoutY="116.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" styleClass="myBlueButton" />
-    <Label layoutX="648.0" layoutY="121.0" text="sort:" />
+    <Label layoutX="648.0" layoutY="121.0" text="Sort:" />
 
-    <ScrollPane layoutX="898.0" layoutY="148.0" prefHeight="249.0" prefWidth="254.0">
+    <ScrollPane layoutX="898.0" layoutY="148.0" prefHeight="249.0" prefWidth="254.0" style="-fx-border-color: #94a8b3;">
         <content>
 
             <Pane prefHeight="453.0" prefWidth="225.0">
@@ -63,6 +63,7 @@
                 <Label layoutX="45.0" layoutY="168.0" prefHeight="17.0" prefWidth="65.0" text="attributes:" />
             </Pane>
         </content></ScrollPane>
+   <Label layoutX="898.0" layoutY="123.0" text="Filtering" />
 
 
 </AnchorPane>
